Implemented full logic but without unit tests

--- a/extract-metadata/share-amp/src/main/amp/config/alfresco/module/share-amp/messages/medicalService.properties
+++ b/extract-metadata/share-amp/src/main/amp/config/alfresco/module/share-amp/messages/medicalService.properties
@@ -11,9 +11,9 @@ prop.ms_personId=Person id
 prop.ms_firstName=First name
 prop.ms_lastName=Last name
 prop.ms_date=Effective date
-prop.ms_typeCode=Code
-prop.ms_typeName=Type document
-prop.ms_typeDescription=Description
+prop.ms_docTypeCode=Code
+prop.ms_docTypeName=Type document
+prop.ms_docTypeDescription=Description
 
 #sets
 set.ms_commonpropertiesset=General properties
