update share with new content model

--- a/extract-metadata/share-amp/src/main/amp/config/alfresco/module/share-amp/messages/medicalService.properties
+++ b/extract-metadata/share-amp/src/main/amp/config/alfresco/module/share-amp/messages/medicalService.properties
@@ -14,6 +14,9 @@ prop.ms_date=Effective date
 prop.ms_docTypeCode=Code
 prop.ms_docTypeName=Type document
 prop.ms_docTypeDescription=Description
+prop.ms_gender=Gender
+prop.ms_age=Age
+prop.ms_jobTitle=Job title
 
 #sets
 set.ms_commonpropertiesset=General properties
